--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="main">
         <h1> <span id="first_name">"hhhhhh"</span></h1>
         <p>  <span id="yourAge">"4444444"</span></p>
+        <p>  <span id="yourAge">"4444444"</span></p>
+        <p>  <span id="yourAge">"4444444"</span></p>
+        <p>  <span id="yourAge">"4444444"</span></p>
+
         
     </div>
     <script src="./script.js "></script>
